# datascience-template

./: .gitignore  Makefile  README.md  pyproject.toml
config/: main.yaml
notebooks/: X.0X-template.ipynb
scripts/: execute_notebooks.sh
src/: template.py
src/utils/: colors.py  db_utils.py  styling.py
