[tool.poetry]
name = "science-template"
version = "0.1.0"
description = ""
authors = ["Marc Wiedermann"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
python-dotenv = "^1.0.0"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
